# chess

src/: CMakeLists.txt  Makefile  bot_move.cpp  chess_defines.h  chessboard.cpp  chessboard.h  global.cpp  human_move.cpp  log_speed.txt  piece.cpp  real_move.cpp  structs.h  test.cpp  widget.cpp  widget.h  widget.ui
src/def_glob/: chess_defines.h  global.cpp
src/logs/: log_speed.txt  logs.cpp
src/model/: bot_move.cpp  chessboard.cpp  chessboard.h  human_move.cpp  piece.cpp  real_move.cpp  structs.h
src/view/: widget.cpp  widget.h  widget.ui
